# qa-hackathon

./: .env.example  .gitignore  CLAUDE.md  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  main.py  pyproject.toml
configs/otel/: collector-config.yaml
configs/test_criteria/: cambria-shop-fastapi.md  cambria-shop-vanilla.md  cambria-shop.md  cambria.md
demo_target_app/: main.py  package-lock.json  package.json  pyproject.toml  server.js
demo_target_app/public/: app.js  cart.html  index.html  product.html  style.css
demo_target_app/public/pages/: cart.js  home.js  product.js
demo_target_app/static/: input.css  style.css
demo_target_app/templates/: base.html  cart.html  confirmation.html  home.html  product.html
docker/app/: Dockerfile
docker/chrome/: Dockerfile
docs/: build_managed_agent.md  computer_use.md
scripts/: probe_antigravity.py  probe_chrome_devtools_mcp.py  spike_sandbox_headless.py
src/qa_sentinel/: agent.py  main.py
src/qa_sentinel/agents/: fix_writer.py  fixer.py  pr_agent.py  test_runner.py  verifier.py  workflow.py
src/qa_sentinel/api/: app.py  runner.py  test_criteria_md.py
src/qa_sentinel/callbacks/: confidence_scoring.py  evidence_capture.py  feature_gate.py  safety_guard.py  step_verdict.py
src/qa_sentinel/config/: settings.py
src/qa_sentinel/schemas/: evidence_bundle.py  (+2 more)
tasks/: task_1.md  task_2.md  task_3.md  task_4.md
tests/unit/: test_confidence_scoring.py  test_evidence_bundle.py  test_feature_gate.py
web/: .env.example  Dockerfile  package-lock.json  package.json
web/prisma/: schema.prisma  seed.ts
(+31 files in other folders)
