[project]
name            = "qa-hackathon"
version         = "0.1.0"
description     = "QA Sentinel — autonomous QA agent (RAISE Summit Hackathon 2026)"
readme          = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk",
    "google-genai",
    "playwright",
    "pydantic",
    "pydantic-settings",
    "python-decouple",
    "asyncpg",
    "pygithub",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "python-dotenv",
    "pyyaml",
    "mcp>=1.28.1",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.ruff]
line-length = 100

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qa_sentinel"]

[tool.uv]
package = true
