[project]
name = "cambria-shop"
version = "0.1.0"
description = "Deliberately-buggy demo shop app for QA Sentinel to test"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.12",
]

[tool.hatch.build.targets.wheel]
bypass-selection = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
